--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -11,3 +11,10 @@ spring.jpa.properties.jakarta.persistence.sharedCache.mode=ENABLE_SELECTIVE
 
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=Brazil/East
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=natalycarvalhodasilva606@gmail.com
+spring.mail.password=rwll nvpg ixmy gwnf
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
