--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -5,6 +5,7 @@ spring.datasource.username=${POSTGRESUSER}
 spring.datasource.password=${POSTGRESPASSWORD}
 
 spring.jpa.show-sql=true
+spring.flyway.enabled=true
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
